# repro-cgal-nef3-triangulation-bug

./: CMakeLists.txt  README.md  default.nix  package.nix
CGAL/: default.nix  fix-triangle-order.patch
src/: main.cpp
